--- a/public/views/homepage.html
+++ b/public/views/homepage.html
@@ -1,5 +1,69 @@
 <section class='homepage-main-wrapper'>
 
-	
+	<section class='slider-wrapper'>
+		<article class='homepage-slider'>
+			<!--plugin -->
+		</article>
+		<article class='slider-products'>
+			<div>
+				<img src='img/product1' alt='Product1'>
+			</div>
+			<div>
+				<img src='img/product2' alt='Product2'>
+			</div>
+		</article>
+	</section>
+
+	<section class='info'>
+		<article>
+			<h3>Brownie jelly beans</h3>
+			Marshmallow muffin sweet cake apple pie. Sugar plum chocolate liquorice pudding pudding tootsie roll chocolate bar cake. Bear claw sweet jelly-o. Chocolate cake jelly-o pie chocolate cake oat cake gummies sweet roll jujubes candy canes. Marzipan halvah cotton candy cupcake cheesecake. Sweet candy canes apple pie chocolate bar candy croissant. Chocolate bar bonbon dessert.
+		</article>
+		<article>
+			<h3>Gummi bears ice cream</h3>
+			Dessert marzipan jelly beans lemon drops pastry topping candy gummi bears. Toffee croissant macaroon cheesecake cake gingerbread jujubes jelly beans. Chocolate sesame snaps sesame snaps tiramisu carrot cake oat cake apple pie muffin carrot cake. Macaroon apple pie caramels topping liquorice cotton candy. Topping pie icing cheesecake pudding.
+		</article>
+	</section>
+
+	<section class='util-link'>
+			<img src='img/psp.png' alt='psp'>
+			<img src='img/lg.png' alt='lg'>
+			<img src='img/wii.png' alt='wii'>
+			<img src='img/lenovo.png' alt='lenovo'>
+			<img src='img/razer.png' alt='razer'>
+			<img src='img/apple.png' alt='apple'>
+	</section>
+
+	<section class='cool-products'>
+		<h3>More cool products</h3>
+		<article>
+			<img src='img/prod1.png' alt='prod1'>
+			<div>
+				<h3>Product nr. 1</h3>
+				Oat cake donut pastry fruitcake candy canes ice cream chocolate apple pie pie. Sweet roll liquorice candy canes pastry liquorice soufflé.
+			</div>
+		</article>
+		<article>
+			<img src='img/prod2.png' alt='prod2'>
+			<div>
+				<h3>Product nr. 2</h3>
+				Oat cake donut pastry fruitcake candy canes ice cream chocolate apple pie pie. Sweet roll liquorice candy canes pastry liquorice soufflé.
+			</div>
+		</article>
+		<article>
+			<img src='img/prod3.png' alt='prod3'>
+			<div>
+				<h3>Product nr. 3</h3>
+				Oat cake donut pastry fruitcake candy canes ice cream chocolate apple pie pie. Sweet roll liquorice candy canes pastry liquorice soufflé.
+			</div>
+		</article>
+		<article>
+			<img src='img/prod4.png' alt='prod4'>
+			<div>
+				<h3>Product nr. 4</h3>
+				Oat cake donut pastry fruitcake candy canes ice cream chocolate apple pie pie. Sweet roll liquorice candy canes pastry liquorice soufflé.
+			</div>
+		</article>
+	</section>
 
 </section>
