--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,29 +1,80 @@
+/* line 1, ../sass/partials/styles.scss */
 header {
-  max-width: 1200px;
-  margin: 0 auto;
-  left: 0;
-  right: 0; }
-  header section {
-    max-width: 90%;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    margin-top: 50px; }
+  width: 100%;
+  height: 100px;
+  background-color: #505766;
+}
+/* line 6, ../sass/partials/styles.scss */
+header .header {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding: 20px 50px;
+}
+/* line 12, ../sass/partials/styles.scss */
+header .header img {
+  max-height: 100%;
+}
+/* line 16, ../sass/partials/styles.scss */
+header .header .header-right {
+  float: right;
+  height: 100%;
+  padding: 15px 0;
+}
+/* line 21, ../sass/partials/styles.scss */
+header .header .header-right a {
+  display: inline-block;
+  position: relative;
+  color: #dedede;
+  padding: 0px 10px;
+  margin-bottom: -6px;
+  top: -30%;
+  text-decoration: none;
+}
+/* line 30, ../sass/partials/styles.scss */
+header .header .header-right a:first-child {
+  margin-right: 10px;
+}
+/* line 34, ../sass/partials/styles.scss */
+header .header .header-right a:hover {
+  background-color: #c2fd00;
+  color: #505766;
+}
+/* line 41, ../sass/partials/styles.scss */
+header .header .header-right .separator {
+  width: 1px;
+  height: 100%;
+  background-color: #dedede;
+  display: inline-block;
+}
 
-.homepage-main-wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  margin-top: 50px;
-  height: 1200px;
-  border: 1px solid black; }
-
-#tasks-main-wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  left: 0;
-  right: 0;
-  margin-top: 50px;
-  height: 1200px;
-  border: 1px solid black; }
+/* line 52, ../sass/partials/styles.scss */
+.footer {
+  padding: 20px;
+  width: 100%;
+  height: 100px;
+  background-color: #dedede;
+}
+/* line 59, ../sass/partials/styles.scss */
+.footer img {
+  max-height: 100%;
+}
+/* line 64, ../sass/partials/styles.scss */
+.footer a {
+  display: inline-block;
+  position: relative;
+  color: #dedede;
+  padding: 0px 10px;
+  margin-bottom: -6px;
+  top: -30%;
+  text-decoration: none;
+}
+/* line 73, ../sass/partials/styles.scss */
+.footer a:first-child {
+  margin-right: 10px;
+}
+/* line 77, ../sass/partials/styles.scss */
+.footer a:hover {
+  background-color: #c2fd00;
+  color: #505766;
+}
