--- a/public/views/homepage.html
+++ b/public/views/homepage.html
@@ -1,4 +1,4 @@
-<section class='main-wrapper homepage-main-wrapper visibility-hidden'>
+<section class='main-wrapper homepage-main-wrapper'>
 
 	<section class='slider-wrapper'>
 		<section class='homepage-slider'>
@@ -55,14 +55,15 @@
 	</section> -->
 
 	<section class='util-link'>
-			<img src='images/psp_logo.png' alt='psp' class='pull-left'>
-			<div class='movers-row'>
-				<div><img src='images/apple_logo.png' alt='apple' class='pull-right'></div>
-				<div><img src='images/razer_logo.png' alt='razer' class='pull-right'></div>
-				<div><img src='images/lenovo_logo.png' alt='lenovo' class='pull-right'></div>
-				<div><img src='images/wii_logo.png' alt='wii' class='pull-right'></div>
-				<div><img src='images/lg_logo.png' alt='lg' class='pull-right'></div>
-			</div>
+		<div class='movers-row'>
+			<div><img src='images/apple_logo.png' alt='apple'></div>
+			<div><img src='images/psp_logo.png' alt='psp'></div>
+			<div><img src='images/lg_logo.png' alt='lg'></div>
+			<div><img src='images/wii_logo.png' alt='wii'></div>
+			<div><img src='images/lenovo_logo.png' alt='lenovo'></div>
+			<div><img src='images/razer_logo.png' alt='razer'></div>
+			
+		</div>
 	</section>
 
 	<section class='cool-products'>
