--- a/public/views/homepage.html
+++ b/public/views/homepage.html
@@ -2,24 +2,32 @@
 
 	<section class='slider-wrapper'>
 		<section class='homepage-slider'>
-			<article class='homepage-slider-slide slide-1'>
+			<article class='homepage-slider-slide slide-1 active-slide'>
+				<span class='vertical-align-helper'></span>
+				<img src='images/products/name34.png' alt='Slide 1 image' />
 			</article>
 			<article class='homepage-slider-slide slide-2'>
+				<span class='vertical-align-helper'></span>
+				<img src='images/products/name27.png' alt='Slide 2 image' />
 			</article>
 			<article class='homepage-slider-slide slide-3'>
+				<span class='vertical-align-helper'></span>
+				<img src='images/products/name43.png' alt='Slide 3 image' />
 			</article>
 			<article class='homepage-slider-navigation-wrapper'>
 				<img src='images/slider_arrow.png' class='slider-arrow'>
-				<span class='homepage-slider-nav active-nav' data-nav="1">LG</span>
-				<span class='homepage-slider-nav' data-nav="2">Razer</span>
-				<span class='homepage-slider-nav' data-nav="3">Apple</span>
+				<span class='homepage-slider-nav active-nav' data-nav="1">Nikon</span>
+				<span class='homepage-slider-nav' data-nav="2">Sony</span>
+				<span class='homepage-slider-nav' data-nav="3">Philips</span>
 			</article>
 		</section>
 		<section class='slider-products'>
 			<div class='slider-product-1'>
+				<span class='vertical-align-helper'></span>
 				<img src='images/products/name2.png' alt='Product1'>
 			</div>
 			<div class='slider-product-2'>
+				<span class='vertical-align-helper'></span>
 				<img src='images/products/name11.png' alt='Product2'>
 			</div>
 		</section>
@@ -36,24 +44,6 @@
 		</article>
 	</section>
 
-	<!-- <section class='util-link col-md-12'>
-			<img src='images/psp_logo.png' alt='psp' class='col-md-2'>
-			<img src='images/lg_logo.png' alt='lg' class='col-md-2'>
-			<img src='images/wii_logo.png' alt='wii' class='col-md-2'>
-			<img src='images/lenovo_logo.png' alt='lenovo' class='col-md-2'>
-			<img src='images/razer_logo.png' alt='razer' class='col-md-2'>
-			<img src='images/apple_logo.png' alt='apple'>
-	</section> -->
-
-	<!-- <section class='util-link col-md-12'>
-			<div class='col-md-2'><img src='images/psp_logo.png' alt='psp'></div>
-			<div class='col-md-2'><img src='images/lg_logo.png' alt='lg'></div>
-			<div class='col-md-2'><img src='images/wii_logo.png' alt='wii'></div>
-			<div class='col-md-2'><img src='images/lenovo_logo.png' alt='lenovo'></div>
-			<div class='col-md-2'><img src='images/razer_logo.png' alt='razer'></div>
-			<div class='col-md-2'><img src='images/apple_logo.png' alt='apple'></div>
-	</section> -->
-
 	<section class='util-link'>
 		<div class='movers-row'>
 			<div><img src='images/apple_logo.png' alt='apple'></div>
@@ -61,8 +51,7 @@
 			<div><img src='images/lg_logo.png' alt='lg'></div>
 			<div><img src='images/wii_logo.png' alt='wii'></div>
 			<div><img src='images/lenovo_logo.png' alt='lenovo'></div>
-			<div><img src='images/razer_logo.png' alt='razer'></div>
-			
+			<div><img src='images/razer_logo.png' alt='razer'></div>		
 		</div>
 	</section>
 
@@ -70,6 +59,7 @@
 		<h3 class='equal-header-margins-h3'>More cool products</h3>
 		<article>
 			<div>
+				<span class='vertical-align-helper'></span>
 				<img src='images/products/name13.png' alt='prod1'>
 			</div>
 			<div>
@@ -79,6 +69,7 @@
 		</article>
 		<article>
 			<div>
+				<span class='vertical-align-helper'></span>
 				<img src='images/products/name38.png' alt='prod1'>
 			</div>
 			<div>
@@ -88,6 +79,7 @@
 		</article>
 		<article>
 			<div>
+				<span class='vertical-align-helper'></span>
 				<img src='images/products/name40.png' alt='prod1'>
 			</div>
 			<div>
@@ -97,6 +89,7 @@
 		</article>
 		<article>
 			<div>
+				<span class='vertical-align-helper'></span>
 				<img src='images/products/name6.png' alt='prod1'>
 			</div>
 			<div>
