--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,6 +20,11 @@ body {
   font-size: 20px;
   color: #e62e00;
 }
+.vertical-align-helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
 /* START INDEX PAGE LESS */
 header {
   width: 100%;
@@ -58,6 +63,7 @@ header .header .header-right a.hover-link:hover {
 }
 header .header .header-right a.cart-link {
   height: 30px;
+  top: -40%;
 }
 header .header .header-right .separator {
   width: 1px;
@@ -111,6 +117,24 @@ footer .footer-pull-right a:hover {
   float: left;
   position: relative;
 }
+.homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-slide {
+  width: 100%;
+  height: 100%;
+  padding: 10px 20px 20px 20px;
+  display: none;
+  text-align: center;
+  font: 0/0 a;
+}
+.homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-slide.active-slide {
+  display: block;
+}
+.homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-slide img {
+  max-width: 100%;
+  max-height: 90%;
+  position: relative;
+  display: inline;
+  vertical-align: middle;
+}
 .homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-navigation-wrapper {
   position: absolute;
   bottom: 0;
@@ -125,12 +149,16 @@ footer .footer-pull-right a:hover {
   border-right: 1px solid #505766;
   border-left: 1px solid #505766;
   float: left;
+  font-size: 16px;
 }
 .homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-navigation-wrapper span.homepage-slider-nav:first-of-type {
   border-left: none;
 }
 .homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-navigation-wrapper span.homepage-slider-nav:last-of-type {
   border-right: none;
+}
+.homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-navigation-wrapper span.homepage-slider-nav:hover {
+  cursor: pointer;
 }
 .homepage-main-wrapper .slider-wrapper .homepage-slider .homepage-slider-navigation-wrapper .slider-arrow {
   position: absolute;
@@ -145,13 +173,18 @@ footer .footer-pull-right a:hover {
 .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-1,
 .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-2 {
   height: 50%;
+  width: 100%;
   padding: 20px;
   text-align: center;
+  vertical-align: middle;
+  font: 0/0 a;
 }
 .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-1 img,
 .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-2 img {
   max-height: 100%;
-  display: inline-block;
+  max-width: 100%;
+  display: inline;
+  vertical-align: middle;
 }
 .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-1 {
   border-bottom: 1px solid #505766;
@@ -227,6 +260,7 @@ footer .footer-pull-right a:hover {
 .homepage-main-wrapper .cool-products article div:first-child {
   float: left;
   text-align: center;
+  font: 0/0 a;
 }
 .homepage-main-wrapper .cool-products article div:first-child:hover {
   background-color: #ffffff;
@@ -237,27 +271,30 @@ footer .footer-pull-right a:hover {
 }
 .homepage-main-wrapper .cool-products article div img {
   max-height: 100%;
+  max-width: 100%;
+  vertical-align: middle;
   display: inline-block;
 }
 /* START HOMEPAGE LESS */
 /* START REGISTER LESS */
+.register-main-wrapper .registration-optional {
+  display: none;
+}
 .register-main-wrapper h2 {
   text-align: center;
   color: #505766;
 }
 .register-main-wrapper p {
-  width: 75%;
   margin: 0 auto;
   font-size: 20px;
   margin-bottom: 30px;
+  display: inline-block;
+  margin-left: 20px;
 }
 .register-main-wrapper form {
   position: relative;
   width: 75%;
   margin: 0 auto;
-}
-.register-main-wrapper form .registration-optional {
-  display: none;
 }
 .register-main-wrapper form label,
 .register-main-wrapper form input,
@@ -301,4 +338,62 @@ footer .footer-pull-right a:hover {
 }
 .register-main-wrapper form .registration-button:hover {
   cursor: pointer;
+}
+/* END REGISTER LESS */
+/* START MEDIA QUERIES */
+@media screen and (max-width: 1071px) {
+  .homepage-main-wrapper .cool-products article {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 960px) {
+  .homepage-main-wrapper .slider-wrapper {
+    height: 748px;
+  }
+  .homepage-main-wrapper .slider-wrapper .homepage-slider {
+    width: 100%;
+    height: 496px;
+    float: none;
+    border-right: none;
+  }
+  .homepage-main-wrapper .slider-wrapper .slider-products {
+    width: 100%;
+    height: 250px;
+    border-left: none;
+    border-top: 2px solid #505766;
+  }
+  .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-1,
+  .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-2 {
+    width: 50%;
+    height: 100%;
+    float: left;
+    border: none;
+    border-left: 1px solid #505766;
+  }
+  .homepage-main-wrapper .slider-wrapper .slider-products .slider-product-1 {
+    border-right: 1px solid #505766;
+    border-left: none;
+  }
+}
+@media screen and (max-width: 821px) {
+  footer {
+    height: 140px;
+    text-align: center;
+  }
+  footer .footer-pull-right {
+    float: none;
+  }
+}
+@media screen and (max-width: 522px) {
+  .homepage-main-wrapper .slider-wrapper .slider-products {
+    height: 242px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .register-main-wrapper p {
+    margin-left: 10px;
+  }
+  footer a {
+    padding: 0 2px;
+  }
 }
