Register system validation

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,19 @@ body {
   height: 100%;
   vertical-align: middle;
 }
+.error-message {
+  background-color: rgba(242, 23, 23, 0.13);
+  border: 2px solid rgba(230, 0, 0, 0.42);
+  border-radius: 5px;
+  padding: 20px 20px 10px 0px;
+}
+.error-message li {
+  width: 100%;
+  margin: 0 !important;
+  color: #DD1717;
+  margin-bottom: 5px;
+  font-size: 15px;
+}
 /* START INDEX PAGE LESS */
 header {
   width: 100%;
@@ -382,6 +395,11 @@ footer .footer-pull-right a:hover {
   }
   footer .footer-pull-right {
     float: none;
+  }
+}
+@media screen and (max-width: 750px) {
+  .main-wrapper.register-main-wrapper {
+    width: 100%;
   }
 }
 @media screen and (max-width: 522px) {
