--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -437,6 +437,123 @@ footer {
 
 
 
+/*START PRODUCTS LESS*/
+.products-main-wrapper{
+
+	.products{
+		height: 100%;
+		width: 100%;
+
+		article{
+			width: 32.9%;
+			height: 200px;
+			border: 2px solid @darkerGrey;
+			margin-bottom: 30px;
+			display: inline-block;
+			
+			&:nth-of-type(n) {
+				margin-right: 0.15%;
+			}
+
+			div{//partea dreapta
+				height: 100%;
+				width: 55%;
+				float: right;
+				text-align: justify;
+				display: inline-block;
+				// padding-left: 2px;
+				// padding-right: 2px;
+
+				&:hover {
+					background-color: @grey;
+					.product-right-down-left{
+								background-color: @grey;
+								}
+				}
+
+				&:first-child{//partea stanga
+					height: 100%;
+					width: 45%;
+					float: left;
+
+					img {
+						max-height: 65%;
+						display: block;
+						margin-left: auto;
+						margin-right: auto;
+						margin-top: 35px;
+						}
+
+					&:hover {
+					background-color: @white;
+				}
+
+				}
+
+				div{//partea dreapta jos
+					height: 12%;
+					width: 100%;
+					display: inline-block;
+
+					&:first-child{//partea dreapta sus
+						height: 88%;
+						width: 100%;
+						display: inline-block;
+
+						&:hover {
+							background-color: @grey;
+							}
+					}
+
+					div{//partea dreapta jos dreapta
+						height: 100%;
+						width: 50%;
+						float: right;
+						text-align: center;
+						background-color: @darkBlue;
+						color: @white;
+						display: inline-block;
+
+						&:hover {
+								background-color: @lightGreen;
+								color: @darkBlue;
+								}
+
+						&:first-child{//partea dreapta jos stanga
+							height: 100%;
+							width: 50%;
+							float: left;
+							background-color: @white;
+
+							span{
+
+								img{
+								width: 16%;
+								max-height: 50%;
+								display: inline-block;
+								margin-top: -10px;
+								}
+
+								&:hover{
+									background-color: @darkBlue;
+								}
+
+							}
+						}
+					}
+				}
+			}
+		}
+		h4 {
+		text-align: left;
+		margin-top: 15px;
+		}
+	}
+}
+/*END PRODUCTS LESS*/
+
+
+
 /* START MEDIA QUERIES */
 
 @media screen and (max-width: 1071px) {
