Added FAQs page

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -149,6 +149,29 @@ footer {
 /* END INDEX PAGE LESS */
 
 
+/* START FAQs LESS */
+ .faqs-main-wrapper {
+ .faqs {
+	text-align: justify;
+ }
+ h3 {
+ 	margin-top: 70px;
+ }
+ h2 {
+ 	text-align: center;
+ 	margin-bottom: 60px;
+ 	margin-top: 60px;
+ }
+ .separator {
+				width: 100%;
+				height: 1px;
+				background-color: @grey;
+				display: inline-block;
+
+ }
+}
+/* END FAQs PAGE LESS */
+
 
 /* START HOMEPAGE LESS */
 .homepage-main-wrapper {
