--- a/public/views/faqs.html
+++ b/public/views/faqs.html
@@ -1,3 +1,4 @@
+<section class='main-wrapper faqs-main-wrapper'>
 <section class='faqs' >
 <section class='title'>
 <h2> Frequently asked questions<h2>
