--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,6 +113,25 @@ footer .footer-pull-right a:hover {
   background-color: #c2fd00;
 }
 /* END INDEX PAGE LESS */
+/* START FAQs LESS */
+.faqs-main-wrapper .faqs {
+  text-align: justify;
+}
+.faqs-main-wrapper h3 {
+  margin-top: 70px;
+}
+.faqs-main-wrapper h2 {
+  text-align: center;
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+.faqs-main-wrapper .separator {
+  width: 100%;
+  height: 1px;
+  background-color: #dedede;
+  display: inline-block;
+}
+/* END FAQs PAGE LESS */
 /* START HOMEPAGE LESS */
 .homepage-main-wrapper .slider-wrapper {
   width: 100%;
@@ -430,6 +449,7 @@ footer .footer-pull-right a:hover {
 }
 .products-main-wrapper .products article div div div:first-child span img {
   width: 16%;
+  max-height: 50%;
   display: inline-block;
   margin-top: -10px;
 }
