--- a/public/views/products.html
+++ b/public/views/products.html
@@ -1,15 +1,15 @@
 <section class='main-wrapper products-main-wrapper'>
 
-	<section class='products'>
+	<section class='products' ng-if="Products.length > 0">
 
 		<h1 class='equal-header-margins-h3'>Products</h1>
 
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
+		<article ng-repeat="Product in Products">
+			<div class ='product-left'><img src='{{Product.image}}' alt='prod1'></div> 
 			<div class = 'product-right'>
 				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
+					<h4>{{Product.name}}</h4>
+					{{Product.description}}
 				</div>
 				<div class = 'product-right-down'>
 					<div class = 'product-right-down-left'>
@@ -24,406 +24,6 @@
 			</div>
 		</article>	
 
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>		
-		
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name9.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-
-		<article>
-			<div class ='product-left'><img src='images/products/name37.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>
-
-		<article>
-			<div class ='product-left'><img src='images/products/name13.png' alt='prod1'></div> 
-			<div class = 'product-right'>
-				<div class = 'product-right-up'>
-					<h4>Product name</h4>
-					Oat cake donut pastry fruitcake candy canes. disns genisls.
-				</div>
-				<div class = 'product-right-down'>
-					<div class = 'product-right-down-left'>
-						<span><img src='images/full_star.png' alt='a'></span>
-						<span><img src='images/full_star.png' alt='b'></span>
-						<span><img src='images/full_star.png' alt='c'></span>
-						<span><img src='images/empty_star.png' alt='d'></span>
-						<span><img src='images/empty_star.png' alt='e'></span>
-					</div>
-					<div class = 'product-right-down-right'>Add to cart</div>
-				</div>
-			</div>
-		</article>	
-		
 	</section>
 
 </section>
