--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ body {
   font-family: steinerlight;
 }
 .main-wrapper {
-  width: 75%;
+  width: 70%;
   margin: 0 auto 30px auto;
   position: relative;
   padding: 30px 0;
@@ -135,7 +135,7 @@ footer .footer-pull-right a:hover {
 /* START HOMEPAGE LESS */
 .homepage-main-wrapper .slider-wrapper {
   width: 100%;
-  height: 500px;
+  height: 400px;
   border: 2px solid #505766;
 }
 .homepage-main-wrapper .slider-wrapper .homepage-slider,
@@ -280,22 +280,19 @@ footer .footer-pull-right a:hover {
 .homepage-main-wrapper .cool-products article:nth-of-type(2n+1) {
   margin-right: 0.5%;
 }
+.homepage-main-wrapper .cool-products article:hover {
+  background-color: #dedede;
+}
 .homepage-main-wrapper .cool-products article div {
   width: 50%;
   height: 100%;
   float: right;
   padding: 10px;
 }
-.homepage-main-wrapper .cool-products article div:hover {
-  background-color: #dedede;
-}
 .homepage-main-wrapper .cool-products article div:first-child {
   float: left;
   text-align: center;
   font: 0/0 a;
-}
-.homepage-main-wrapper .cool-products article div:first-child:hover {
-  background-color: #ffffff;
 }
 .homepage-main-wrapper .cool-products article div h3 {
   text-align: center;
@@ -387,18 +384,18 @@ footer .footer-pull-right a:hover {
 .products-main-wrapper .products article:nth-of-type(n) {
   margin-right: 0.15%;
 }
+.products-main-wrapper .products article:hover {
+  background-color: #dedede;
+}
+.products-main-wrapper .products article:hover .product-right-down-left {
+  background-color: #dedede;
+}
 .products-main-wrapper .products article div {
   height: 100%;
   width: 55%;
   float: right;
-  text-align: justify;
   display: inline-block;
-}
-.products-main-wrapper .products article div:hover {
-  background-color: #dedede;
-}
-.products-main-wrapper .products article div:hover .product-right-down-left {
-  background-color: #dedede;
+  padding: 1px;
 }
 .products-main-wrapper .products article div:first-child {
   height: 100%;
@@ -412,9 +409,6 @@ footer .footer-pull-right a:hover {
   margin-right: auto;
   margin-top: 35px;
 }
-.products-main-wrapper .products article div:first-child:hover {
-  background-color: #ffffff;
-}
 .products-main-wrapper .products article div div {
   height: 12%;
   width: 100%;
@@ -424,9 +418,6 @@ footer .footer-pull-right a:hover {
   height: 88%;
   width: 100%;
   display: inline-block;
-}
-.products-main-wrapper .products article div div:first-child:hover {
-  background-color: #dedede;
 }
 .products-main-wrapper .products article div div div {
   height: 100%;
@@ -446,15 +437,13 @@ footer .footer-pull-right a:hover {
   width: 50%;
   float: left;
   background-color: #ffffff;
+  padding-right: 1.6px;
 }
 .products-main-wrapper .products article div div div:first-child span img {
   width: 16%;
-  max-height: 50%;
+  max-height: 70%;
   display: inline-block;
-  margin-top: -10px;
-}
-.products-main-wrapper .products article div div div:first-child span:hover {
-  background-color: #505766;
+  margin-top: -4px;
 }
 .products-main-wrapper .products h4 {
   text-align: left;
@@ -522,4 +511,25 @@ footer .footer-pull-right a:hover {
   footer a {
     padding: 0 2px;
   }
+}
+/* END MEDIA QUERIES */
+/*START ABOUT LESS*/
+.aboutUs-main-wrapper .aboutus {
+  height: 100%;
+  width: 100%;
+}
+.aboutUs-main-wrapper .aboutus article {
+  text-align: justify;
+}
+/*END ABOUT LESS*/
+/*START TERMS LESS*/
+.termsAndConditions-main-wrapper .termsAndConditions {
+  height: 100%;
+  width: 100%;
+}
+/*END TERMS LESS*/
+/*START PRIVACY LESS*/
+.privacyPolicy-main-wrapper .privacyPolicy {
+  height: 100%;
+  width: 100%;
 }
