--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -17,7 +17,7 @@ body {
 }
 
 .main-wrapper {
-	width: 75%;
+	width: 70%;
 	margin: 0 auto 30px auto;
 	position: relative;
 	padding: 30px 0;
@@ -177,7 +177,7 @@ footer {
 .homepage-main-wrapper {
 	.slider-wrapper {
 		width: 100%;
-		height: 500px;
+		height: 400px;
 		border: 2px solid @darkBlue;
 
 		.homepage-slider, .slider-products {
@@ -345,24 +345,20 @@ footer {
 				margin-right: 0.5%;
 			}
 
+			&:hover {
+					background-color: @grey;
+				}
+
 			div {
 				width: 50%;
 				height: 100%;
 				float: right;
 				padding: 10px;
 
-				&:hover {
-					background-color: @grey;
-				}
-
 				&:first-child {
 					float: left;
 					text-align: center;
 					font: 0/0 a;
-
-					&:hover {
-						background-color: @white;
-					}
 				}
 
 				h3 {
@@ -478,21 +474,19 @@ footer {
 				margin-right: 0.15%;
 			}
 
-			div{//partea dreapta
-				height: 100%;
-				width: 55%;
-				float: right;
-				text-align: justify;
-				display: inline-block;
-				// padding-left: 2px;
-				// padding-right: 2px;
-
-				&:hover {
+			&:hover {
 					background-color: @grey;
 					.product-right-down-left{
 								background-color: @grey;
 								}
 				}
+
+			div{//partea dreapta
+				height: 100%;
+				width: 55%;
+				float: right;
+				display: inline-block;
+				padding: 1px;
 
 				&:first-child{//partea stanga
 					height: 100%;
@@ -506,11 +500,6 @@ footer {
 						margin-right: auto;
 						margin-top: 35px;
 						}
-
-					&:hover {
-					background-color: @white;
-				}
-
 				}
 
 				div{//partea dreapta jos
@@ -522,10 +511,6 @@ footer {
 						height: 88%;
 						width: 100%;
 						display: inline-block;
-
-						&:hover {
-							background-color: @grey;
-							}
 					}
 
 					div{//partea dreapta jos dreapta
@@ -547,20 +532,16 @@ footer {
 							width: 50%;
 							float: left;
 							background-color: @white;
+							padding-right: 1.6px;
 
 							span{
 
 								img{
 								width: 16%;
-								max-height: 50%;
+								max-height: 70%;
 								display: inline-block;
-								margin-top: -10px;
+								margin-top: -4px;
 								}
-
-								&:hover{
-									background-color: @darkBlue;
-								}
-
 							}
 						}
 					}
@@ -656,3 +637,40 @@ footer {
 }
 
 /* END MEDIA QUERIES */
+
+/*START ABOUT LESS*/
+.aboutUs-main-wrapper {
+	.aboutus {
+		height: 100%;
+		width: 100%;
+		article {
+			text-align: justify;
+
+		}
+	}
+}
+/*END ABOUT LESS*/
+
+/*START TERMS LESS*/
+.termsAndConditions-main-wrapper {
+	.termsAndConditions {
+		height: 100%;
+		width: 100%;
+		article {
+
+		}
+	}
+}
+/*END TERMS LESS*/
+
+/*START PRIVACY LESS*/
+.privacyPolicy-main-wrapper {
+	.privacyPolicy {
+		height: 100%;
+		width: 100%;
+		article {
+
+		}
+	}
+}
+/*END PRIVACY LESS*/
