Testing gitignore settings

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -5,6 +5,8 @@
 @lightGreen: #c2fd00;
 @red: #E62E00;
 
+// END VARIABLE DECLARATION SECTION
+
 @font-face {
 	font-family: steinerlight;
 	src: url("./fonts/Steinerlight.ttf");
