Products Pagination in 6 hours <3

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -55,6 +55,8 @@ body {
 	}
 }
 
+
+
 /* START INDEX PAGE LESS */
 
 header {
@@ -511,6 +513,16 @@ footer {
 	.products{
 		height: 100%;
 		width: 100%;
+		 .pagination-centered {
+			 padding-left: 380px;
+			 float: center; 
+			 img{
+			 	margin-left: 50px;
+			 }
+			 }
+			
+			   
+		
 
 		article{
 			width: 32.9%;
