--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,8 +1,8 @@
 <section class='main-wrapper login-main-wrapper'>
 
 	<form class='login-form' method='post' action='/api/login'>
-		<input type='text' id='username' name='username' placeholder='User' value='' />
-		<input type='password' id='password' name='password' placeholder='Password' value='' />
+		<input type='text' id='username' name='username' placeholder='User' value='Matthew' required/>
+		<input type='password' id='password' name='password' placeholder='Password' value='19940210' required />
 		<button type='submit'>Login</button>
 		<a href='forgot-password'>Forgot your password ?</a>
 	</form>
