Product page pagination

--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -172,6 +172,10 @@ body {
 }
 
 
+.hidden-product-number {
+	display: none;
+}
+
 /* START INDEX PAGE LESS */
 
 header {
@@ -615,7 +619,6 @@ footer {
 			display: inline-block;
 			text-decoration: none;
 			color: @darkerGrey;
-			
 		}
 	}
 }
