--- a/public/views/products.html
+++ b/public/views/products.html
@@ -3,15 +3,20 @@
 
 		<h1 class='title'>Products</h1>
 
-		<article ng-repeat="Product in Products">
+		<article ng-repeat="Product in Products" class="edec-product">
+			<span class="hidden-product-number">
+			{{Product.id_product}}
+			</span>
 			<div class = 'product-left'>
 				<span class='vertical-align-helper'></span>
 				<img src='{{Product.image}}' alt='prod1'>
 			</div> 
+
 			<div class = 'product-right'>
+
 				<div class = 'product-right-up'>
 					<h4>{{Product.name}}</h4>
-					{{Product.description}}
+					{{Product.description}}				
 				</div>
 				<div class = 'product-right-down'>
 					<div class = 'product-right-down-left'>
@@ -25,37 +30,15 @@
 				</div>
 			</div>
 		</article>	
-
 	<div class="pagination-centered">
-		<a href="#" id="Previous" onclick="PreviousFunction()"> 
-			<img  src='images/previous.png' alt='Previous'>
+		<a href="" id="products-previous"> 
+			<img src='images/previous.png' alt='Previous'>
 		</a>
 		
-		<a href="#" id="Next" onclick="NextFunction()">
+		<a href="" id="products-next">
 			<img  src='images/next.png' alt='Next'>
 		</a>
 	</div>
-	<script type="text/javascript">
-		var number =1;
-		var page= window.location.origin+"/products/";
-		var address;
-		function NextFunction()  
-		{
-			number=number+1;
-			address="";
-			var address= page+number;
-			document.getElementById("Next").href=address;
-		}
-
-		function PreviousFunction()
-		{
-			var string=window.location.href;
-    		var res = string.split("/");
-			number=res[4]-1;
-			address="";
-			var address= page+number;
-			document.getElementById("Previous").href=address;
-		}
-	</script>
 	</section>
 </section>
+<script src="js/main.js"></script>
