--- a/public/views/product.html
+++ b/public/views/product.html
@@ -19,6 +19,11 @@
 				</div>
 			</div>
 	</section>
+	<section  class="comments">
+	<article clss="comment" ng-repeat="Comment in Comments">
+	{{Comment.comm}}
+	</article>
+	</section>
 </section>
 
 <script src="js/main.js"></script>
